objects/cpqlabs__Cancel_Replace__e.object
<CustomObject>
    <fields>
        <fullName>cpqlabs__ContractId__c</fullName>
        <description>Contract Id that was amended.</description>
        <label>Contract Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqlabs__JobId__c</fullName>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqlabs__QuoteId__c</fullName>
        <description>Id of the amended Quote</description>
        <label>Quote Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Cancel Replace</label>
    <pluralLabel>Cancel Replace</pluralLabel>
</CustomObject>